deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: node.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: node-app-service
            port: 
              number: 3000
